# mados-wallpaper

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  __init__.py  __main__.py  app.py  config.py  database.py  http_client.py  mados-wallpaper.desktop  pyproject.toml  theme.py  wallpaper_scanner.py  workspace_card.py
daemon/: __init__.py  __main__.py  mados-wallpaperd  mados_wallpaperd.py  renderer.py
renderer/: Cargo.toml
renderer/src/: backend.rs  gpu_pipeline.rs  main.rs  shell_backend.rs  wayland_gl_backend.rs
tests/: __init__.py  test_basic.py
