[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mados-wallpaper"
version = "1.0.0"
description = "Wallpaper manager for madOS"
requires-python = ">=3.10"
dependencies = [
    "pygobject",
]

[project.scripts]
mados-wallpaper = "mados_wallpaper.__main__:main"